--- a/Máquinas em Série - IG/Desafio 6 - PFSP IG - Dupla 09.ipynb
+++ b/Máquinas em Série - IG/Desafio 6 - PFSP IG - Dupla 09.ipynb
@@ -279,7 +279,7 @@
     "        if testCmax < calcCmax(m, best_jobs):\n",
     "            best_jobs = jobs1[:]\n",
     "            \n",
-    "        elif np.random.random_sample() <= np.exp(-testCmax - bestCmax) / temperature:\n",
+    "        elif np.random.random_sample() <= np.exp(-testCmax - calcCmax(m, best_jobs)) / temperature:\n",
     "            best_jobs = jobs1[:]\n",
     "            \n",
     "    return best_jobs, calcCmax(m, best_jobs)"
