Updated temperature condition

--- a/Máquinas em Série - NEH, LS, IG/Dupla 09 - Desafio 7 - Heurística.ipynb
+++ b/Máquinas em Série - NEH, LS, IG/Dupla 09 - Desafio 7 - Heurística.ipynb
@@ -350,7 +350,7 @@
     "        if testCmax < calcCmax(m, best_jobs):\n",
     "            best_jobs = jobs1[:]\n",
     "            \n",
-    "        elif np.random.random_sample() <= np.exp(-testCmax - calcCmax(m, best_jobs)) / temperature:\n",
+    "        elif temperature != 0. and np.random.random_sample() <= np.exp(-testCmax - calcCmax(m, best_jobs)) / temperature:\n",
     "            best_jobs = jobs1[:]\n",
     "            \n",
     "    return best_jobs, calcCmax(m, best_jobs)"
