Updated archives names

--- a/Máquinas em Série - NEH, LS, IG/Dupla 09 - Desafio 7 - Heurística.ipynb
+++ b/Máquinas em Série - NEH, LS, IG/Dupla 09 - Desafio 7 - Heurística.ipynb
@@ -1176,7 +1176,7 @@
     }
    ],
    "source": [
-    "wb1 = xw.Book('Desafio 7 - Dupla 09 - Instâncias.xlsx')\n",
+    "wb1 = xw.Book('Dupla 09 - Desafio 7 - Instâncias.xlsx')\n",
     "wb2 = xw.Book()\n",
     "I = wb1.sheets.count     # número de instância é igual ao número de planilhas na pasta\n",
     "d_values = [2, 3, 5, 8]\n",
@@ -1202,7 +1202,7 @@
     "    \n",
     "gravaSched(I, table, m, n, d_values, T_values, rep)\n",
     "\n",
-    "wb2.save('Desafio 7 - Dupla 09 - Output.xlsx')"
+    "wb2.save('Dupla 09 - Desafio 7 - Output.xlsx')"
    ]
   }
  ],
